Prevent double tap zoom on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -156,3 +156,8 @@ textarea{
   box-shadow: 2px 2px 8px rgba(black, .3);
   border: 0;
 }
+
+/* Prevent double tap zoom on mobile */
+body{
+    touch-action: manipulation;
+}
